network/den.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: np-test
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
