network/deny-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: np-test
spec:
  podSelector: {}
#    matchLabels:
#      app: nginx
  policyTypes:
  - Ingress
  - Egress
#  ingress:
#    - from:
#        - namespaceSelector:
#            matchLabels:
#              app: alia
#        ports:
#          - protocol: TCP
#            port: 80
